--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ click==8.1.7
 colorama==0.4.6
 flasgger==0.9.7.1
 Flask==3.0.3
+Flask-Cors==4.0.1
 Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-Script==2.0.6
 Flask-SQLAlchemy==3.1.1
+flask-swagger-ui==4.11.1
 greenlet==3.0.3
 importlib_metadata==8.2.0
 itsdangerous==2.2.0
@@ -22,6 +24,7 @@ mistune==3.0.2
 packaging==24.1
 PyMySQL==1.1.1
 python-decouple==3.8
+python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.2
 referencing==0.35.1
