--- a/static/swagger/config.json
+++ b/static/swagger/config.json
@@ -6,7 +6,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:5000"
+      "url": "http://15.228.162.164:5000"
     },
     {
       "url": "https://monitoramentofrutas.pythonanywhere.com"
